--- a/client/index.html
+++ b/client/index.html
@@ -12,5 +12,9 @@
   <ol>
     <li><a href="./api/hello">/api/hello</a></li>
   </ol>
+  <h2>List of scripts:</h2>
+  <ol>
+    <li><a href="./scripts/hello">/scripts/hello</a></li>
+  </ol>
 </body>
 </html>
