--- a/client/index.html
+++ b/client/index.html
@@ -6,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Echo Rest API</title>
 </head>
-<body>
+<body style="background-color: #232323; color: #fefefe;">
   <h1>Welcome to the Echo Restful API</h1>
   <h2>List of endpoints:</h2>
   <ul>
-    <li><a href="./api/hello">/api/hello</a></li>
+    <li><a href="./api/hello" style="color: #0094e3;">/api/hello</a></li>
   </ul>
   <h2>List of scripts:</h2>
   <ul>
-    <li><a href="./scripts/hello">/scripts/hello</a></li>
+    <li><a href="./scripts/helloWorld" style="color: #0094e3;">/scripts/helloWorld</a></li>
   </ul>
 </body>
 </html>
