--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Echo Rest API</title>
 </head>
-<body style="background-color: #232323; color: #fefefe;">
+<body style="background-color: #232323; color: #fefefe; font-family: Arial;">
   <h1>Welcome to the Echo Restful API</h1>
   <h2>List of endpoints:</h2>
   <ul>
