--- a/client/index.html
+++ b/client/index.html
@@ -7,14 +7,10 @@
   <title>Echo Rest API</title>
 </head>
 <body style="background-color: #232323; color: #fefefe; font-family: Arial;">
-  <h1>Welcome to the Echo Restful API</h1>
+  <h1>Echo Restful API</h1>
   <h2>List of endpoints:</h2>
   <ul>
-    <li><a href="./api/hello" style="color: #0094e3;">/api/hello</a></li>
-  </ul>
-  <h2>List of scripts:</h2>
-  <ul>
-    <li><a href="./scripts/helloWorld" style="color: #0094e3;">/scripts/helloWorld</a></li>
+    <li><a href="./api/helloWorld" style="color: #0094e3;">/api/helloWorld</a></li>
   </ul>
 </body>
 </html>
