--- a/client/404.html
+++ b/client/404.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>404 Page Not Found</title>
 </head>
-<body>
+<body style="background-color: #232323; color: #fefefe; font-family: Arial;">
   <h1>404 Page Not Found</h1>
-  <a href="../../../../../../../..">Return to main page</a>
+  <a href="../../../../../../../.." style="color: #0094e3;">Return to main page</a>
 </body>
 </html>
