--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
   <h2>List of endpoints:</h2>
   <ul>
     <li><a href="./api/helloWorld" style="color: #0094e3;">/api/helloWorld</a></li>
+    <li><a href="./api/shopping" style="color: #0094e3;">/api/shopping</a></li>
     <li><a href="./api/plants" style="color: #0094e3;">/api/plants</a></li>
     <li><a href="./api/cars" style="color: #0094e3;">/api/cars</a></li>
   </ul>
