--- a/client/index.html
+++ b/client/index.html
@@ -10,10 +10,7 @@
   <h1>Echo Restful API</h1>
   <h2>List of endpoints:</h2>
   <ul>
-    <li><a href="./api/helloWorld" style="color: #0094e3;">/api/helloWorld</a></li>
-    <li><a href="./api/shopping" style="color: #0094e3;">/api/shopping</a></li>
-    <li><a href="./api/plants" style="color: #0094e3;">/api/plants</a></li>
-    <li><a href="./api/cars" style="color: #0094e3;">/api/cars</a></li>
+    <li><a href="./api/shopping" style="color: #0094e3;">/api/shopping</a> (GET, POST)</li>
   </ul>
 </body>
 </html>
