--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   <h1>Echo Restful API</h1>
   <h2>List of endpoints:</h2>
   <ul>
-    <li><a href="./api/shopping" style="color: #0094e3;">/api/shopping</a> (GET, POST, DELETE)</li>
+    <li><a href="./api/shopping" style="color: #0094e3;">/api/shopping</a> (GET, POST, PUT, DELETE)</li>
   </ul>
 </body>
 </html>
