--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
   <h2>List of endpoints:</h2>
   <ul>
     <li><a href="./api/shopping" style="color: #0094e3;">/api/shopping</a> (GET, POST, PUT, DELETE)</li>
+    <li><a href="./api/projects" style="color: #0094e3;">/api/projects</a> (GET)</li>
   </ul>
 </body>
 </html>
